--- a/lab18/pubspec.yaml
+++ b/lab18/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   sqflite: ^2.0.2
+  cloud_firestore: ^3.1.10
   path_provider: ^2.0.9
+  firebase_core: ^1.13.1
   flutter:
     sdk: flutter
 
