--- a/lab20/android/app/src/main/AndroidManifest.xml
+++ b/lab20/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lab20">
    <application
-        android:label="lab20"
+        android:label="KTLab"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
