--- a/lab21/pubspec.yaml
+++ b/lab21/pubspec.yaml
@@ -48,9 +48,11 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.0"
 
 flutter_icons:
-    image_path: "icon/icon.png"
-    android: true
-    ios: true
+  image_path: "icon/icon.png"
+  android: true
+  ios: true
+  adaptive_icon_background: "#ffffff"
+
     # optionally, as transparency is not allowed on app store
     # remove_alpha_ios: true
 
